# AgroBot-Universal-AI-Based-Agricultural-Assistant

./: AgroBot_Documentation.md  LICENSE
AgroBot-Universal-AI-Based-Agricultural-Assistant/: app.py  gemini_helper.py
AgroBot-Universal-AI-Based-Agricultural-Assistant/data/: agrobot.db
AgroBot-Universal-AI-Based-Agricultural-Assistant/static/uploads/: script.js  style.css
AgroBot-Universal-AI-Based-Agricultural-Assistant/templates/: about.html  community.html  crop_planner.html  pest_database.html  register.html  thread.html
AgroBot-Universal-AI-Based-Agricultural-Assistant/templates/admin/: analytics.html  chats.html  knowledge_base.html  view_user.html
AgroBot-Universal-AI-Based-Agricultural-Assistant/uploads/documents/: 6_DAYS_AGENDA_generative_AI_1772199345.docx
Milestone-1/: app.py
Milestone-1/templates/: base.html  home.html  login.html
Milestone-2/data/: agrobot.db
Milestone-2/static/css/: style.css
Milestone-2/templates/: base.html
Milestone-3/: app.py  pyproject.toml
Milestone-3/data/: agrobot.db
Milestone-3/templates/: base.html  contact.html
Milestone-4/templates/: admin_dashboard.html  admin_view_user.html  base.html  chat_community.html
Milestone-4/templates/admin/: system_health.html
